--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = ""
 authors = ["Rubem Mota <rubemmota89@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.7"
 requests = "^2.26.0"
+black = "^21.9b0"
+isort = "^5.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -16,3 +18,18 @@ flake8-bugbear = "^21.9.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+src_paths = ["src", "tests"]
+skip_glob = ["docs/*"]
+include_trailing_comma = true
+force_grid_wrap = false
+combine_as_imports = true
+line_length = 79
+force_sort_within_sections = true
+no_lines_before = "THIRDPARTY"
+sections = "FUTURE,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
+default_section = "THIRDPARTY"
+known_first_party = "fabdb_sdk"
